[package]
name = "ifft"
version = "0.5.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "IF Filsystem-event Then..."
repository = "https://github.com/braincore/ifft"
keywords = ["filewatcher", "inotify", "fsevents"]
readme = "README.md"

[dependencies]
chrono = "0.4.6"
clap = "2.32"
globset = "0.4.2"
notify = "4.0.0"
notify-rust = "3.6.2"
serde = "1.0"
serde_derive = "1.0"
shellexpand = "1.0"
toml = "0.4"
walkdir = "2"

[badges]
travis-ci = { repository = "braincore/ifft" }
