[package]
name = "ifft"
version = "0.10.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
edition = "2018"
license = "MIT"
description = "IF Filsystem-event Then..."
repository = "https://github.com/braincore/ifft"
keywords = ["filewatcher", "inotify", "fsevents"]
readme = "README.md"

[dependencies]
chrono = "0.4.6"
clap = "2.32"
crossbeam-channel = "0.4.0"
globset = "0.4.2"
ignore = "0.4"
nix = "0.23.0"
notify = "5.0.0-pre.5"
notify-rust = "3.6.2"
serde = "1.0"
serde_derive = "1.0"
shellexpand = "1.0"
toml = "0.4"

[badges]
travis-ci = { repository = "braincore/ifft" }
